# ComiQ

./: .gitignore  CHANGELOG.md  CUDA_SUPPORT_EXPLAINED.md  README.md  pyproject.toml  requirements.txt  sample.py
examples/: ReadME.md
src/comiq/: __init__.py  ai_processing.py  comiq.py  models.py  ocr.py  preprocessing.py  prompts.py  utils.py
