[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "comiq"
dynamic = ["version","dependencies"]
authors = [
    {name = "MoltenSteel", email = "stoneSteel27@gmail.com"},
]
description = "A Python module for comic text extraction and processing"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/StonSteel27/ComiQ"
"Bug Tracker" = "https://github.com/StonSteel27/ComiQ/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "comiq.__version__"}