[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "comiq"
dynamic = ["version","dependencies"]
authors = [
    {name = "MoltenSteel", email = "stonesteel27@gmail.com"},
]
description = "Comic-Focused Hybrid OCR Python Library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/StoneSteel27/ComiQ"
"Bug Tracker" = "https://github.com/StoneSteel27/ComiQ/issues"

[project.optional-dependencies]
# Explicit version control for power users
paddleocr2 = [
    "paddleocr>=2.9.0,<3.0",
    "paddlepaddle>=2.5.0,<3.0"
]
# 'all' now mirrors base requirements (kept for backwards compatibility)
all = [
    "paddleocr>=2.9.0,<3.0; python_version < '3.13'",
    "paddlepaddle>=2.5.0,<3.0; python_version < '3.13'"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "comiq.__version__"}